# tracker_ole_repro

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  run_tracker_49q_hardware.ps1
data/raw/tracker_metadata/: operator_loschmidt_echo_49x1296.json  operator_loschmidt_echo_49x648.json  operator_loschmidt_echo_70x1872.json  operator_loschmidt_echo_README.md  tracker_asset_index.json
data/results/hardware/: operator_loschmidt_echo_49x648_result_20260402a.json  operator_loschmidt_echo_49x648_submit_20260402a.json  smoke_20260404a_summary.json
docs/: 00_project_scope.md  01_tracker_definition.md  01_tracker_semantics.md  02_reproduction_criteria.md
scripts/: run-in-qiskit-venv.sh
src/tracker_ole_repro/: __init__.py  paths.py
src/tracker_ole_repro/circuits/: __init__.py  inspect_qasm.py
src/tracker_ole_repro/cli/: __init__.py  inspect_tracker.py  run_small_sanity.py  run_tracker_basis_term.py  run_tracker_hardware.py  run_tracker_hardware_smoke.py  validate_estimator.py
src/tracker_ole_repro/estimator/: __init__.py  definitions.py  ole_estimator.py  validation.py
src/tracker_ole_repro/simulation/: __init__.py  aer_runner.py  exact_runner.py  tracker_hardware_runner.py  tracker_runner.py
src/tracker_ole_repro/tracker_io/: __init__.py  fetch_tracker_assets.py  load_qasm.py  load_tracker_instance.py
tests/: test_estimator_definition.py  test_estimator_semantics.py  test_exact_runner.py  test_qasm_loading.py  test_tracker_hardware_runner.py  test_tracker_metadata.py  test_tracker_runner.py
