[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tracker_ole_repro"
version = "0.1.0"
description = "Reproduction-first scaffold for tracker OLE benchmark work."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "qiskit>=2.1",
    "qiskit-aer>=0.15",
    "qiskit_qasm3_import>=0.6",
    "qiskit-ibm-runtime",
    "numpy>=1.26",
    "scipy>=1.12",
    "pandas>=2.2",
    "matplotlib>=3.8",
    "jupyter>=1.0",
    "pytest>=8.0",
    "tqdm>=4.66",
]

[project.scripts]
inspect-tracker-qasm = "tracker_ole_repro.cli.inspect_tracker:main"
run-tracker-basis-term = "tracker_ole_repro.cli.run_tracker_basis_term:main"
run-tracker-hardware = "tracker_ole_repro.cli.run_tracker_hardware:main"
run-tracker-hardware-smoke = "tracker_ole_repro.cli.run_tracker_hardware_smoke:main"
validate-estimator = "tracker_ole_repro.cli.validate_estimator:main"
run-small-sanity = "tracker_ole_repro.cli.run_small_sanity:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
